modifiedd ccron settings

--- a/.sample.env
+++ b/.sample.env
@@ -1,5 +1,5 @@
 DATABASE_URL=XXX
-SLACK_CLIENT_IT=XXX
+SLACK_CLIENT_ID=XXX
 SLACK_CLIENT_SECRET=XXX
 SLACK_SIGNING_SECRET=XXX
 SLACK_ACCESS_TOKEN=XXX
